# aurelia

./: .gitignore  README.md  pixi.toml  pyproject.toml
example_project/: .gitignore  README.md  evaluate.py  pixi.toml  pyproject.toml  solution.py
example_project/tests/: test_solution.py
src/aurelia/cli/: init_cmd.py  main.py  report_cmd.py  wizard_prompts.py
src/aurelia/components/: base.py  coder.py  evaluator.py  planner.py  presubmit.py
src/aurelia/components/prompts/: coder_system.txt  evaluator_system.txt  planner_system.txt
src/aurelia/core/: config.py  events.py  ids.py  logging.py  models.py  pricing.py  runtime.py  state.py
src/aurelia/dispatch/: base.py  planner.py
src/aurelia/git/: repo.py  worktree.py
src/aurelia/llm/: cache.py  client.py
src/aurelia/metrics/: __init__.py  server.py
src/aurelia/monitor/: __init__.py  app.py  state.py  styles.tcss
src/aurelia/monitor/widgets/: __init__.py  candidate_detail.py  candidates.py  events.py  header.py  plan.py  stats.py  task_detail.py  tasks.py
src/aurelia/sandbox/: Dockerfile  Dockerfile.evaluator  __init__.py  docker.py
src/aurelia/tools/: builtin.py  registry.py
tests/: test_coder.py  test_component_base.py  test_dispatcher.py  test_docker.py  test_e2e.py  test_evaluator.py  test_events.py  test_git.py  test_ids.py  test_init.py  test_llm_cache.py  test_logging.py  test_metrics.py  test_models.py  test_monitor.py  test_planner.py  test_presubmit.py  test_pricing.py  test_report.py  test_runtime.py  test_state.py  test_tools.py
